Add native TRELLIS and Qwen3-4B LLM support with GPU memory management

--- a/.gitignore
+++ b/.gitignore
@@ -270,6 +270,7 @@ datasets/
 
 # Exceptions for specific files that should be tracked
 !requirements.txt
+!requirements-*.txt
 !README.md
 !LICENSE
 !SECURITY.md
