--- a/requirements-torch.txt
+++ b/requirements-torch.txt
@@ -1,5 +1,9 @@
+# =============================================================================
+# PyTorch Dependencies (CUDA 12.8)
+# =============================================================================
 --index-url https://download.pytorch.org/whl/cu128
-torch
-torchvision
-torchaudio
 
+# Core PyTorch packages
+torch==2.7.0
+torchvision==0.22.0
+torchaudio==2.7.0
